--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function clearText(field)
                 	<div class="row1 box5">
                     	<div class="box_with_padding">
                         	<h5>Twitter </h5>
-                         	Any twitt's, under DEV. <a href="http://bit.ly/13IwZO">http://www.milletdiet.epizy.com</a>
+                         	Any twitt's, under DEV. <a href="http://www.milletdiet.epizy.com">http://www.milletdiet.epizy.com</a>
 						</div>
                     </div>
                     <div class="row2" id="home_gallery">
@@ -143,7 +143,7 @@ function clearText(field)
                	  	<p>UNDER DEV,This is where Vital info are stred for you. Visit <a href="#gallery"><strong> Gallery Page</strong></a> for more info.<br />
                	    <br />
 				All photos by <a href="https://www.facebook.com/pg/prodkconsult" rel="nofollow">prodkconsult/facebookwall</a> website or more info.<br />
-				Developer,Other Sites <a href="http://www.gbiviwo.ga/check?uri=referer" rel="nofollow">gabby</a> &amp; <a href="http://www.milletdiet.epizy.com/css-validator/check/referer" rel="nofollow">Temp site</a></p>
+				Developer,Other Sites <a href="http://www.gbiviwo.ga" rel="nofollow">gabby</a> &amp; <a href="http://www.milletdiet.epizy.com" rel="nofollow">Temp site</a></p>
                 </div>
                 <a href="#home" class="home_btn">home</a> 
                 <a href="#about" class="page_nav_btn previous">Previous</a>
