--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ http://previewsite.ga
 <html xmlns="http://www.previewsite.ga/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Tech Layer, free website template</title>
+<title>ProDKConsult, Your dream, our reality</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="templatemo_style.css" type="text/css" rel="stylesheet" /> 
