--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ function clearText(field)
 
 <div id="templatemo_footer_wrapper">
 	<div id="templatemo_footer">
-    	<p>Copyright © 2072ProdkConsult      </p>
+    	<p>Copyright © 2017Pro-dkConsult productions     </p>
     </div>
 </div>
 
